# aTES

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml
ates_lib/: pyproject.toml
ates_lib/ates/: async_messaging.py  consumer.py  make_schema.py  schema.py
ates_lib/schemas/tasks/added/: 1.json
ates_lib/schemas/tasks/assigned/: 1.json
ates_lib/schemas/tasks/closed/: 1.json
ates_lib/schemas/users/created/: 1.json
ates_lib/schemas/users/updated/: 1.json
auth/: Makefile  pyproject.toml
auth/auth/: asgi.py  async_messaging.py  events.py  settings.py  urls.py  wsgi.py
auth/auth/commands/: consume.py
auth/templates/: base.html
auth/users/: models.py  urls.py  views.py
auth/users/migrations/: 0001_initial.py  0002_user_public_id.py  0003_alter_user_public_id.py
billing/: Makefile  pyproject.toml
billing/accounting/: models.py  services.py  urls.py  views.py
billing/accounting/migrations/: 0001_initial.py  0002_alter_task_assignee.py
billing/billing/: asgi.py  settings.py  urls.py  wsgi.py
billing/templates/: base.html
billing/users/: models.py  services.py  urls.py  views.py
billing/users/migrations/: 0001_initial.py
task_tracker/: Makefile  pyproject.toml
task_tracker/task_tracker/: asgi.py  async_messaging.py  events.py  settings.py  urls.py  wsgi.py
task_tracker/tasks/: forms.py  models.py  services.py  urls.py  views.py
task_tracker/tasks/migrations/: 0001_initial.py  0002_alter_task_uuid.py  0003_rename_uuid_task_public_id.py
task_tracker/templates/: base.html
task_tracker/users/: models.py  urls.py  views.py
task_tracker/users/migrations/: 0001_initial.py  0002_alter_user_external_user_id.py  0003_remove_user_external_user_id_user_public_id.py  0004_user_role.py  0005_alter_user_public_id.py
(+8 files in other folders)
